Fix possible crash when importing KIM files

BUG: 444792